--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "types": "./dist/index.d.ts",
     "sideEffects": false,
     "type": "module",
-    "version": "0.0.1-2",
+    "version": "0.0.2",
     "repository": {
         "type": "git",
         "url": "https://github.com/186526/handlers.js-jsonrpc"
